mediastreamer-2.2.3: 21, January 2009
	* rfc3984 support improved 
	* webcam support on windows largely improved (vfw mode)
	* support for configuring video size up to svga
	* video output can automatically resize to the size of received video stream
	* fix crash when resizing video window
	* new MSWebcam object to provide Webcam management and MSFilter instantiation
	* alsa bugfixes

mediastreamer-2.2.2: 6, october 2008
	* new winsnd3.c file for support of soundcard under windows (seems to work a bit better)
	* bugfixes

mediastreamer-2.2.1: 25, january 2008
	* video output resizing
	* 4CIF and VGA support
	* bugfixes
	* added snow codec (experimental)
	* enable setting of max rtp payload size for all encoders

mediastreamer-2.2.0: 19, November 2007
	* new "no webcam" screen
	* bandwidth settings improvements
	* new REQ_VFU command to request a video encoder to send an I-frame
		(implemented for ffmpeg based encoders)
	* contributed macosx sound support
	* new MSVolume filter to make sound power measurements
	* rate control of ffmpeg video codecs

mediastreamer-2.1.0: 23, January 2007
	* add support for Video4Linux V2 cameras
	* support for mpjeg cameras
	* webcam support on windows operational
	* video window display ok on windows
	* fix bug with quickcam driver on linux
	* bandwidth setting improvements.