@@ -129,18 +129,18 @@ static int enc_set_br(MSFilter *f, void*data){
 	if (br>=1024000){
 		vsize.width = MS_VIDEO_SIZE_4CIF_W;
 		vsize.height = MS_VIDEO_SIZE_4CIF_H;
-		s->tinfo.quality=32;
-		fps=15;
+		s->tinfo.quality=15;
+		fps=30;
 	}else if (br>=512000){
 		vsize.width = MS_VIDEO_SIZE_CIF_W;
 		vsize.height = MS_VIDEO_SIZE_CIF_H;
-		s->tinfo.quality=32;
+		s->tinfo.quality=15;
 		fps=15;
 	}else if (br>=256000){
 		vsize.width = MS_VIDEO_SIZE_CIF_W;
 		vsize.height = MS_VIDEO_SIZE_CIF_H;
 		s->tinfo.quality=5;
-		fps=12;
+		fps=15;
 	}else if(br>=128000){
 		vsize.width=MS_VIDEO_SIZE_QCIF_W;
 		vsize.height=MS_VIDEO_SIZE_QCIF_H;
